--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.20",
+    "axios": "^0.24.0",
+    "cors": "^2.8.5",
+    "globalstyles": "^2.0.0",
+    "http-proxy-middleware": "^2.0.2",
     "react": "^17.0.2",
+    "react-calendar": "^3.6.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.3",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
@@ -39,5 +52,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/react-calendar": "^3.4.5",
+    "@types/react-helmet": "^6.1.5"
+  },
+  "proxy": "https://fantasy.premierleague.com"
 }
