--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "globalstyles": "^2.0.0",
     "http-proxy-middleware": "^2.0.2",
+    "msw": "^0.38.1",
     "react": "^17.0.2",
     "react-calendar": "^3.6.0",
     "react-dom": "^17.0.2",
@@ -57,5 +58,8 @@
     "@types/react-calendar": "^3.4.5",
     "@types/react-helmet": "^6.1.5"
   },
-  "proxy": "https://fantasy.premierleague.com"
+  "proxy": "https://fantasy.premierleague.com",
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
