--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.20",
     "axios": "^0.24.0",
@@ -21,9 +22,11 @@
     "react-calendar": "^3.6.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
