--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "globalstyles": "^2.0.0",
     "http-proxy-middleware": "^2.0.2",
+    "moment": "^2.29.1",
     "msw": "^0.38.1",
     "react": "^17.0.2",
     "react-calendar": "^3.6.0",
