--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@angular/common": "^13.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
+    "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.2",
