add:main & ckeditor style / need to make signIn, signUp etc...

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@angular/common": "^13.3.0",
+    "@ckeditor/ckeditor5-basic-styles": "^33.0.0",
     "@ckeditor/ckeditor5-build-classic": "^33.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.1",
