--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ckeditor/ckeditor5-basic-styles": "^33.0.0",
     "@ckeditor/ckeditor5-build-classic": "^33.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
+    "@ckeditor/ckeditor5-upload": "^33.0.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -20,9 +21,11 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.20",
     "axios": "^0.24.0",
+    "ckeditor5": "^33.0.0",
     "cors": "^2.8.5",
     "globalstyles": "^2.0.0",
     "http-proxy-middleware": "^2.0.2",
+    "https": "^1.0.0",
     "moment": "^2.29.1",
     "msw": "^0.38.1",
     "react": "^17.0.2",
@@ -66,6 +69,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.180",
     "@types/react-calendar": "^3.4.5",
     "@types/react-helmet": "^6.1.5"
   },
