--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "ckeditor5": "^33.0.0",
     "cors": "^2.8.5",
     "globalstyles": "^2.0.0",
+    "http-browserify": "^1.7.0",
     "http-proxy-middleware": "^2.0.2",
     "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
     "moment": "^2.29.1",
     "msw": "^0.38.1",
     "react": "^17.0.2",
