--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ckeditor5": "^33.0.0",
     "cors": "^2.8.5",
     "globalstyles": "^2.0.0",
+    "html-react-parser": "^1.4.10",
     "http-browserify": "^1.7.0",
     "http-proxy-middleware": "^2.0.2",
     "https": "^1.0.0",
