--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/ckeditor__ckeditor5-core": "^33.0.0",
     "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "^17.0.11",
@@ -44,6 +43,7 @@
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
@@ -73,10 +73,13 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.180",
+    "@types/node": "^17.0.31",
     "@types/react-calendar": "^3.4.5",
-    "@types/react-helmet": "^6.1.5"
+    "@types/react-helmet": "^6.1.5",
+    "mini-css-extract-plugin": "2.4.5"
   },
   "msw": {
     "workerDirectory": "public"
-  }
+  },
+  "type": "module"
 }
