add:Myteam page : need to add squad picture

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@ckeditor/ckeditor5-build-classic": "^33.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
     "@ckeditor/ckeditor5-upload": "^33.0.0",
+    "@dhaiwat10/react-link-preview": "^1.14.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -39,6 +40,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tiny-link": "^3.6.1",
     "redux": "^4.1.2",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.3",
